- Added readme for nightly build download - Reworked some of the UI - Added translations for jp

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,5 +2,6 @@
   "RPCS3 Directory": "RPCS3 Directory",
   "Game Version": "Game Version",
   "Mod Version": "Mod Version",
-  "Launch": "Launch"
+  "Launch": "Launch",
+  "Check for updates": "Check for updates"
 }
