--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -2,5 +2,6 @@
   "RPCS3 Directory": "RPCS3目录",
   "Game Version": "游戏版本",
   "Mod Version": "Mod版本",
-  "Launch": "运行"
+  "Launch": "运行",
+  "Check for updates": "检测更新"
 }
