--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,5 +3,8 @@
   "Game Version": "Game Version",
   "Mod Version": "Mod Version",
   "Launch": "Launch",
-  "Check for updates": "Check for updates"
+  "Check for updates": "Check for updates",
+  "Apply updates": "Apply updates",
+  "RPCS3 Directory Changed": "RPCS3 Directory Changed",
+  "Processing new directory": "Processing new directory"
 }
