Added settings persistence using tauri plugin store
- Added enabled boolean to enable or disable the config components
- Added dependency to zustand
- Added dependency to zod
- Trying to fix eslint?

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,5 +6,10 @@
   "Check for updates": "Check for updates",
   "Apply updates": "Apply updates",
   "RPCS3 Directory Changed": "RPCS3 Directory Changed",
-  "Processing new directory": "Processing new directory"
+  "Processing new directory": "Processing new directory",
+  "Games found!": "Games found!",
+  "No games found!": "No games found!",
+  "Light": "light",
+  "Dark": "dark",
+  "System": "system"
 }
