Fixes almost everything

--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -1,15 +1,72 @@
 ﻿{
-  "Rpcs3 executable path": "Rpcs3 アプリパス",
-  "Game Version": "ゲームバージョン",
-  "Mod Version": "MODバージョン",
-  "Launch": "起動",
-  "Check for updates": "アップデートの確認",
-  "Apply updates": "アップデートを適用",
-  "Rpcs3 path changed, processing directory...": "Rpcs3 アプリパスが変更されました、 ゲーム情報再読します。。。",
-  "Games found!": "ゲーム発見!",
-  "No games found!": "ゲームが見つかりません!",
-  "File not found!": "ファイルが見つかりません!",
-  "Light": "ライトモード",
-  "Dark": "暗モード",
-  "System": "システム"
+  "Validating base folder...": "Validating base folder...",
+  "Base folder validation complete.": "Base folder validation complete.",
+  "Starting base folder sync...": "Starting base folder sync...",
+  "Base folder sync complete.": "Base folder sync complete.",
+  "Base Folder": "Base Folder",
+  "In Sync": "In Sync",
+  "Out of Sync": "Out of Sync",
+  "Verify integrity of base folder": "Verify integrity of base folder",
+  "Recheck": "Recheck",
+  "Resynchronize folder": "Resynchronize folder",
+  "Sync": "Sync",
+  "Mod Files": "Mod Files",
+  "Show mod files": "Show mod files",
+  "Show files": "Show files",
+  "Launch game": "Launch game",
+  "Launch": "Launch",
+  "Current Game Directory": "Current Game Directory",
+  "Change directory": "Change directory",
+  "Change rpcs3 directory": "Change rpcs3 directory",
+  "Game Versions": "Game Versions",
+  "No games found!": "No games found!",
+  "Rpcs3 path changed, processing directory...": "Rpcs3 path changed, processing directory...",
+  "Valid executable found!": "Valid executable found!",
+  "The specified file path is not a valid rpcs3 executable!": "The specified file path is not a valid rpcs3 executable!",
+  "Specify Game Executable": "Specify Game Executable",
+  "Please locate the game executable file to initialize the launcher.": "Please locate the game executable file to initialize the launcher.",
+  "Browse": "Browse",
+  "Open file dialog": "Open file dialog",
+  "Continue": "Continue",
+  "Initialize game cache": "Initialize game cache",
+  "Language": "Language",
+  "Select language": "Select language",
+  "Source": "Source",
+  "Select source": "Select source",
+  "Theme": "Theme",
+  "Select theme": "Select theme",
+  "Light": "Light",
+  "Dark": "Dark",
+  "System": "System",
+  "Update": "Update",
+  "Check for launcher updates": "Check for launcher updates",
+  "Fetching updates from remote...": "Fetching updates from remote...",
+  "Fetch complete.": "Fetch complete.",
+  "Refreshing local files...": "Refreshing local files...",
+  "Refresh complete.": "Refresh complete.",
+  "Game Version": "Game Version",
+  "Mod Version": "Mod Version",
+  "Check for updates": "Check for updates",
+  "Fetch data from remote": "Fetch data from remote",
+  "Refresh": "Refresh",
+  "Re-check local file status": "Re-check local file status",
+  "Close": "Close",
+  "Update to the latest version": "Update to the latest version",
+  "Updating, this might take a while...": "Updating, this might take a while...",
+  "Update complete!": "Update complete!",
+  "Starting initialization process...": "Starting initialization process...",
+  "Initialization process complete!": "Initialization process complete!",
+  "Initialize cache folder?": "Initialize cache folder?",
+  "The initialization process involves extracting existing patch files to the update cache repository.": "The initialization process involves extracting existing patch files to the update cache repository.",
+  "This step is required for new rpcs3 directories.": "This step is required for new rpcs3 directories.",
+  "It will take around 5 - 10 minutes depending on the speed of your device.": "It will take around 5 - 10 minutes depending on the speed of your device.",
+  "Cancel": "Cancel",
+  "Initialize": "Initialize",
+  "Long Process": "Long Process",
+  "Updating this file might take a long time.": "Updating this file might take a long time.",
+  "Do you wish to continue?": "Do you wish to continue?",
+  "Duplicate instances": "Duplicate instances",
+  "Hey, another instance of rpcs3 is currently running! 🚀": "Hey, another instance of rpcs3 is currently running! 🚀",
+  "Please terminate the process and retry!": "Please terminate the process and retry!",
+  "Retry": "Retry"
 }
