--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -1,15 +1,77 @@
 ﻿{
-  "Rpcs3 executable path": "Rpcs3 应用路径",
+  "Validating base folder...": "检测本体文件夹中...",
+  "Base folder validation complete.": "本体文件夹检测完毕.",
+  "Starting base folder sync...": "同步本体文件夹中...",
+  "Base folder sync complete.": "本体文件夹同步完毕.",
+  "Base Folder": "本体文件夹",
+  "In Sync": "同步",
+  "Out of Sync": "不同步",
+  "Verify integrity of base folder": "检测本体文件夹同步性",
+  "Recheck": "重新检测",
+  "Resynchronize folder": "同步文件夹",
+  "Sync": "同步",
+  "Mod Files": "Mod 游戏文件",
+  "Show mod files": "显示 mod 游戏文件",
+  "Show files": "显示文件列表",
+  "Launch game": "启动游戏",
+  "Launch": "启动",
+  "Current Game Directory": "文件夹路径",
+  "Change directory": "更换文件夹路径",
+  "Change rpcs3 directory": "更换 rpcs3 文件夹路径",
+  "Game Versions": "游戏版本",
+  "No games found!": "找不着游戏！",
+  "Rpcs3 path changed, processing directory...": "Rpcs3 路径更换，重新检测...",
+  "Valid executable found!": "运行程序核对成功！",
+  "The specified file path is not a valid rpcs3 executable!": "Rpcs3运行程序核对失败！",
+  "Specify Game Executable": "Rpcs3运行程序路径",
+  "Please locate the game executable file to initialize the launcher.": "请输入Rpcs3运行程序路径",
+  "Browse": "浏览",
+  "Open file dialog": "开启文件夹浏览模式",
+  "Continue": "继续",
+  "Initialize game cache": "初化游戏文件下载缓存",
+  "Language": "语言",
+  "Select language": "选择语言",
+  "Source": "下载源头",
+  "Select source": "选择下载源头",
+  "Theme": "主题",
+  "Select theme": "选择主题",
+  "Light": "亮",
+  "Dark": "暗",
+  "System": "系统",
+  "Update": "更新",
+  "Check for launcher updates": "检测启动器更新",
+  "Fetching updates from remote...": "远程获取更新中...",
+  "Fetch complete.": "获取完毕.",
+  "Refreshing local files...": "刷新本地文件中...",
+  "Refresh complete.": "刷新完毕.",
   "Game Version": "游戏版本",
-  "Mod Version": "Mod版本",
-  "Launch": "运行",
+  "Mod Version": "Mod 版本",
   "Check for updates": "检测更新",
-  "Apply updates": "安装更新",
-  "Rpcs3 path changed, processing directory...": "Rpcs3 应用路径变更，重新读取游戏信息。。。",
-  "Games found!": "发现游戏!",
-  "No games found!": "未发现任何游戏!",
-  "File not found!": "文件路径错误！",
-  "Light": "亮色",
-  "Dark": "深色",
-  "System": "系统"
+  "Fetch data from remote": "获取更新",
+  "Refresh": "刷新",
+  "Re-check local file status": "刷新本地文件",
+  "Close": "关闭",
+  "Update to the latest version": "更新至最新版",
+  "Updating, this might take a while...": "更新中, 可能需要一段时间...",
+  "Update complete!": "更新完毕!",
+  "Starting initialization process...": "初化中...",
+  "Initialization process complete!": "初化完毕!",
+  "Initialize cache folder?": "开始初化?",
+  "The initialization process involves extracting existing patch files to the update cache repository.": "初始化过程涉及将现有补丁文件提取到更新缓存存储库",
+  "This step is required for new rpcs3 directories.": "新的 rpcs3 目录都需要此步骤.",
+  "It will take around 5 - 10 minutes depending on the speed of your device.": "整个过程大约需要 5 - 10 分钟",
+  "Cancel": "取消",
+  "Initialize": "初化",
+  "Long Process": "长",
+  "Updating this file might take a long time.": "Updating this file might take a long time.",
+  "Do you wish to continue?": "Do you wish to continue?",
+  "Duplicate instances": "复数 rpcs3",
+  "Hey, another instance of rpcs3 is currently running! 🚀": "检测到另一个 rpcs3 正在运行! 🚀",
+  "Please terminate the process and retry!": "请终止程序并重试!",
+  "Retry": "重试",
+  "Latest": "最新",
+  "Outdated": "过时",
+  "No updates found!": "暂无更新!",
+  "Update available!": "更新",
+  "A new version of launcher is available.": "检测到新版启动器"
 }
