Fixed China source not syncing properly
- QOL updates
- Now launcher updates can't be ignored
- Added option to remove refresh cache
- Improved localizations
- Added chinese path handler
- Fixed toast position and added loading variant
- Mirrors will now fetch from remote too
- Updated version to 0.1.1

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -72,6 +72,12 @@
   "Latest": "Latest",
   "Outdated": "Outdated",
   "No updates found!": "No updates found!",
-  "Update available!": "Update available!",
-  "A new version of launcher is available.": "A new version of launcher is available."
+  "New Update Available!": "New Update Available!",
+  "A new version of launcher is available!": "A new version of launcher is available.",
+  "Please click on the Update button to begin the update process.": "Please click on the Update button to begin the update process.",
+  "Path not supported": "Path not supported",
+  "Path containing Chinese / Japanese characters are not supported!": "Path containing Chinese / Japanese characters are not supported!",
+  "Not Found": "Not Found",
+  "Clear Refresh Cache": "Clear Refresh Cache",
+  "Force launcher to redo all checksum calculations on refresh.": "Force launcher to redo all checksum calculations on refresh."
 }
