- Improved BLJS and NPJB game detection   - BLJS now needs the path defined in games.yml to have PS3_GAMES/PARAM.SFO file exist too to be considered installed   - NPJB now needs EBOOT.BIN to be present on USRDIR to be considered as installed (Due to DLC requiring NPJB be installed) - Reworked dlc unlocking, now it "installs" NPJB too - Fixed a bug where patch_config.yml with All: true schema can't be parsed - Made patch activation failed error message to redirect to manual patch activation

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -89,7 +89,7 @@
   "Patch file activation status check complete.": "Patch file activation status check complete.",
   "Activating patch...": "Activating patch...",
   "Patch file activation complete.": "Patch file activation complete.",
-  "Activation failed. Please check config/patch_config.yml format.": "Activation failed. Please check config/patch_config.yml format.",
+  "Activation failed. Please activate the patch manually by following this guide: ": "Activation failed. Please activate the patch manually by following this guide: ",
   "Invalid RAP file": "Invalid RAP file",
   "A valid RAP file is required to launch the game.": "A valid RAP file is required to launch the game.",
   "Please place your RAP file in 'dev_hdd0/home/00000001/exdata'": "Please place your RAP file in 'dev_hdd0/home/00000001/exdata'",
