--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -1,72 +1,99 @@
 ﻿{
-  "Validating base folder...": "Validating base folder...",
-  "Base folder validation complete.": "Base folder validation complete.",
-  "Starting base folder sync...": "Starting base folder sync...",
-  "Base folder sync complete.": "Base folder sync complete.",
-  "Base Folder": "Base Folder",
-  "In Sync": "In Sync",
-  "Out of Sync": "Out of Sync",
-  "Verify integrity of base folder": "Verify integrity of base folder",
-  "Recheck": "Recheck",
-  "Resynchronize folder": "Resynchronize folder",
-  "Sync": "Sync",
-  "Mod Files": "Mod Files",
-  "Show mod files": "Show mod files",
-  "Show files": "Show files",
-  "Launch game": "Launch game",
-  "Launch": "Launch",
-  "Current Game Directory": "Current Game Directory",
-  "Change directory": "Change directory",
-  "Change rpcs3 directory": "Change rpcs3 directory",
-  "Game Versions": "Game Versions",
-  "No games found!": "No games found!",
-  "Rpcs3 path changed, processing directory...": "Rpcs3 path changed, processing directory...",
-  "Valid executable found!": "Valid executable found!",
-  "The specified file path is not a valid rpcs3 executable!": "The specified file path is not a valid rpcs3 executable!",
-  "Specify Game Executable": "Specify Game Executable",
-  "Please locate the game executable file to initialize the launcher.": "Please locate the game executable file to initialize the launcher.",
-  "Browse": "Browse",
-  "Open file dialog": "Open file dialog",
-  "Continue": "Continue",
-  "Initialize game cache": "Initialize game cache",
-  "Language": "Language",
-  "Select language": "Select language",
-  "Source": "Source",
-  "Select source": "Select source",
-  "Theme": "Theme",
-  "Select theme": "Select theme",
-  "Light": "Light",
-  "Dark": "Dark",
-  "System": "System",
-  "Update": "Update",
-  "Check for launcher updates": "Check for launcher updates",
-  "Fetching updates from remote...": "Fetching updates from remote...",
-  "Fetch complete.": "Fetch complete.",
-  "Refreshing local files...": "Refreshing local files...",
-  "Refresh complete.": "Refresh complete.",
-  "Game Version": "Game Version",
-  "Mod Version": "Mod Version",
-  "Check for updates": "Check for updates",
-  "Fetch data from remote": "Fetch data from remote",
-  "Refresh": "Refresh",
-  "Re-check local file status": "Re-check local file status",
-  "Close": "Close",
-  "Update to the latest version": "Update to the latest version",
-  "Updating, this might take a while...": "Updating, this might take a while...",
-  "Update complete!": "Update complete!",
-  "Starting initialization process...": "Starting initialization process...",
-  "Initialization process complete!": "Initialization process complete!",
-  "Initialize cache folder?": "Initialize cache folder?",
-  "The initialization process involves extracting existing patch files to the update cache repository.": "The initialization process involves extracting existing patch files to the update cache repository.",
-  "This step is required for new rpcs3 directories.": "This step is required for new rpcs3 directories.",
-  "It will take around 5 - 10 minutes depending on the speed of your device.": "It will take around 5 - 10 minutes depending on the speed of your device.",
-  "Cancel": "Cancel",
-  "Initialize": "Initialize",
-  "Long Process": "Long Process",
-  "Updating this file might take a long time.": "Updating this file might take a long time.",
-  "Do you wish to continue?": "Do you wish to continue?",
-  "Duplicate instances": "Duplicate instances",
-  "Hey, another instance of rpcs3 is currently running! 🚀": "Hey, another instance of rpcs3 is currently running! 🚀",
-  "Please terminate the process and retry!": "Please terminate the process and retry!",
-  "Retry": "Retry"
+  "Validating base folder...": "ゲームフォルダを確認中",
+  "Base folder validation complete.": "ゲームフォルダを確認しました。",
+  "Starting base folder sync...": "ゲームフォルダをRPCS3に同期します。",
+  "Base folder sync complete.": "ゲームフォルダをRPCS3に同期しました。",
+  "Base Folder": "ゲームフォルダ",
+  "In Sync": "同期済",
+  "Out of Sync": "未同期",
+  "Verify integrity of base folder": "ゲームフォルダの整合性を確認します。",
+  "Recheck": "再確認",
+  "Resynchronize folder": "フォルダの再同期",
+  "Sync": "同期",
+  "Mod Files": "Modファイル",
+  "Show mod files": "Modファイルの整合性を確認します。",
+  "Show files": "Modファイル一覧",
+  "Launch game": "ゲームを起動します。",
+  "Launch": "ゲーム起動",
+  "Current Game Directory": "現在のRPCS3のディレクトリ",
+  "Change directory": "ディレクトリの変更",
+  "Change RPCS3 directory": "RPCS3実行ファイルのディレクトリ指定を変更します。",
+  "Game Versions": "ゲームのバージョン",
+  "No games found!": "ゲームフォルダがありません。",
+  "RPCS3 path changed, processing directory...": "RPCS3のパスが変更され、処理ディレクトリが変更されました。",
+  "Valid executable found!": "有効なRPCS3実行ファイルが見つかりました。",
+  "The specified file path is not a valid RPCS3 executable!": "指定されたファイルはRPCS3実行ファイルではありません。",
+  "Specify Game Executable": "RPCS3フォルダ内のRPCS3実行ファイルを指定する。",
+  "Please locate the game executable file to initialize the launcher.": "ランチャーの設定をするため、RPCS3実行ファイルを設定してください。",
+  "Browse": "開く",
+  "Open file dialog": "ファイルダイアログを開きます。",
+  "Continue": "Mod設定画面に移動",
+  "Initialize game cache": "ゲームのキャッシュデータを初期化します。",
+  "Language": "言語",
+  "Select language": "言語を選択します。",
+  "Source": "ソース",
+  "Select source": "ソースを選択します。",
+  "Theme": "画面テーマ",
+  "Select theme": "画面の背景色",
+  "Light": "背景色を白にする",
+  "Dark": "背景色を黒にする",
+  "System": "背景色をシステムに合わせる",
+  "Update": "更新",
+  "Check for launcher updates": "Modded Bostランチャーの最新版があるか確認します。",
+  "Fetching updates from remote...": "ネットワーク上のアップデート情報を取得中です。",
+  "Fetch complete.": "アップデート情報を取得しました。",
+  "Refreshing local files...": "ローカルのファイルを更新中です。",
+  "Refresh complete.": "ローカルのファイルを更新しました。",
+  "Game Version": "ゲームバージョン",
+  "Mod Version": "Modバージョン",
+  "Check for updates": "アップデートの確認",
+  "Fetch data from remote": "ネットワーク上のアップデート情報を取得します。",
+  "Refresh": "更新",
+  "Re-check local file status": "ローカルファイルの状態を確認します。",
+  "Close": "閉じる",
+  "Update to the latest version": "最新バージョンへアップデート",
+  "Updating, this might take a while...": "更新中です。しばらくお待ち下さい。",
+  "Update complete!": "更新が完了しました。",
+  "Starting initialization process...": "初期化処理を開始します。。",
+  "Initialization process complete!": "初期化処理が完了しました。",
+  "Initialize cache folder?": "キャッシュフォルダを初期化しますか？",
+  "The initialization process involves extracting existing patch files to the update cache repository.": "初期化処理では既存のパッチファイルをアップデート用のキャッシュリポジトリに抽出する。",
+  "This step is required for new RPCS3 directories.": "この手順は新規のRPCS3には必要です。",
+  "It will take around 5 - 10 minutes depending on the speed of your device.": "お使いのデバイスの速度にもよりますが、5～10分ほどかかります。",
+  "Cancel": "キャンセル",
+  "Initialize": "初期化",
+  "Long Process": "長い処理",
+  "Updating this file might take a long time.": "このファイルの更新には時間がかかる可能性があります。",
+  "Do you wish to continue?": "続けますか？",
+  "Duplicate instances": "RPCS3の複数起動",
+  "Hey, another instance of RPCS3 is currently running! 🚀": "RPCS3が複数起動されています！ 🚀",
+  "Please terminate the process and retry!": "プロセスを終了して再試行してください！",
+  "Retry": "リトライ",
+  "Latest": "最新",
+  "Outdated": "旧式",
+  "No updates found!": "更新が見つかりません。",
+  "New Update Available!": "新しいバージョンが利用可能です。",
+  "A new version of launcher is available!": "新しいバージョンのランチャーが利用可能です。",
+  "Please download and install the updater from the link below.": "以下のリンクからアップデータをダウンロードし、インストールしてください。",
+  "Path not supported": "パスがサポートされていません。",
+  "Path containing Chinese / Japanese characters are not supported!": "RPCS3へのパスは中国語/日本語の文字を含まないでください。",
+  "Not Found": "見つかりません。",
+  "Clear Refresh Cache": "キャッシュをクリアする。",
+  "Force launcher to redo all checksum calculations on refresh.": "更新時にランチャーにすべてのチェックサム計算を強制的に再実行させます。",
+  "Patch Activation": "パッチの有効化",
+  "Not Activated": "無効",
+  "Activated": "有効",
+  "Activate": "有効にする",
+  "Check if imported_path.yml is activated in configuration": "import_path.ymlが有効か確認します",
+  "Checking patch file activation status...": "パッチファイルの有効化状況を確認中です。",
+  "Patch file activation status check complete.": "パッチファイルの有効化状況確認が完了しました。",
+  "Activating patch...": "パッチファイルを有効にしています。",
+  "Patch file activation complete.": "パッチファイルの有効化が完了しました",
+  "Activation failed. Please activate the patch manually by following this guide: ": "有効化に失敗しました。手動でパッチの有効化お願いします: ",
+  "Invalid RAP file": "無効なRAPファイルです。",
+  "A valid RAP file is required to launch the game.": "ゲームを起動するには有効なRAPファイルが必要です。",
+  "Please place your RAP file in 'dev_hdd0/home/00000001/exdata'": "RAPファイルを「dev_hdd0/home/00000001/exdata」に配置してください。",
+  "More information": "詳細はこちら",
+  "Current version": "現在のバージョン",
+  "New version": "最新のバージョン"
 }
